Implement CommandService (AppService) => Add Dto

--- a/Mc2.CrudTest.Domain/CustomerManagement/Localization/CustomerManagementLocalization.fa.resx
+++ b/Mc2.CrudTest.Domain/CustomerManagement/Localization/CustomerManagementLocalization.fa.resx
@@ -120,6 +120,12 @@
   <data name="BankAccountNumber" xml:space="preserve">
     <value>شماره حساب بانکی</value>
   </data>
+  <data name="Customer" xml:space="preserve">
+    <value>مشتری</value>
+  </data>
+  <data name="CustomerId" xml:space="preserve">
+    <value>آیدی مشتری</value>
+  </data>
   <data name="CustomerInfo" xml:space="preserve">
     <value>اطلاعات مشتری</value>
   </data>
@@ -143,5 +149,8 @@
   </data>
   <data name="RepeatedRecord" xml:space="preserve">
     <value>مقدار {0} تکراریست</value>
+  </data>
+  <data name="ResourseNotFound" xml:space="preserve">
+    <value>{0} یافت نشد</value>
   </data>
 </root>
