--- a/Mc2.CrudTest.Domain/CustomerManagement/Localization/CustomerManagementLocalization.en.resx
+++ b/Mc2.CrudTest.Domain/CustomerManagement/Localization/CustomerManagementLocalization.en.resx
@@ -120,6 +120,12 @@
   <data name="BankAccountNumber" xml:space="preserve">
     <value>BankAccountNumber</value>
   </data>
+  <data name="Customer" xml:space="preserve">
+    <value>Customer</value>
+  </data>
+  <data name="CustomerId" xml:space="preserve">
+    <value>CustomerId</value>
+  </data>
   <data name="CustomerInfo" xml:space="preserve">
     <value>CustomerInfo</value>
   </data>
@@ -143,5 +149,8 @@
   </data>
   <data name="RepeatedRecord" xml:space="preserve">
     <value>{0} value is Repeated</value>
+  </data>
+  <data name="ResourseNotFound" xml:space="preserve">
+    <value>ResourseNotFound</value>
   </data>
 </root>
